  is_noun() therefore includes nouns and pronouns (does not check prontype)
  is_determiner() is true if is_pronominal() && is_adjective()
  is_adjective() therefore includes adjectives and determiners
  is_article() is true if prontype values contain 'art'; it is assumed that the
      pos is then 'adj' but it is not tested.

Fixes:
* EU::Conll: still used the deprecated feature 'subpos'.



2.050     2015-09-30 21:09:39+02:00 Europe/Prague

Interface:
* The set() method of FeatureStructure now accepts feature values that had to
  be renamed in the past: degree=comp and number=plu. When someone tries to set
  these values, they will be translated to the new values before storing. Thus
  they will not be returned by any of the get*() methods. No exception will be
  thrown when setting feature values that were valid in the past. Hence
  Interset should finally be backward-compatible with data stored in files.
  Feature values that were never valid will still trigger an exception.
* Added over 70 new is_*() methods in FeatureStructure. Some feature values
  have more than one method if there are two competing terms. Others still
  do not have any method: either because the feature is marginal or because
  the name is ambiguous.



2.049     2015-09-29 14:55:59+02:00 Europe/Prague

Features:
* Value 'comp' of feature 'degree' changed to 'cmp'.
  This was actually a bug. Universal Features (in Universal Dependencies) define
  this value as Cmp, not Comp. The divergence between UD and Interset existed
  unnoticed for about a year.



2.048     2015-09-04 15:05:51+02:00 Europe/Prague

Drivers:
* LA::It



2.047     2015-08-29 18:19:17+02:00 Europe/Prague

Interface:
* FeatureStructure has a new serialization method as_string_conllx() that
  returns feature-value pairs in a form suitable for the FEATS column of the
  CoNLL-X file format.
* FeatureStructure has a new method get_nonempty_features(). It returns the
  list of names of features whose values are not empty.


